--- a/fullstack/ProductManager/server/package.json
+++ b/fullstack/ProductManager/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "productmanager",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,6 +12,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.4.4"
+    "mongoose": "^6.4.5"
   }
 }
